--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ email: omkarn@umich.edu
 #   Google search results) and in your feed.xml site description.
 # twitter_username: username
 github_username: omin23
-minimal_mistakes_skin: dark
+minimal_mistakes_skin: "dark"
 search: true
 
 # Build settings
@@ -60,7 +60,7 @@ plugins:
 author:
   name   : "Omkar Nayak"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "Undergrad at the University of Michigan Computer Science and Math department"
+  bio    : "Undergrad at the University of Michigan Computer Science and Mathematics department"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
@@ -89,16 +89,16 @@ footer:
 
 defaults:
   # _posts
-  - scope:
-      path: ""
-      type: posts
-    values:
-      layout: single
-      author_profile: true
-      read_time: true
-      comments: true
-      share: true
-      related: true
+  # - scope:
+  #     path: ""
+  #     type: posts
+  #   values:
+  #     layout: single
+  #     author_profile: true
+  #     read_time: true
+  #     comments: true
+  #     share: true
+  #     related: true
   # _pages
   - scope:
       path: "_pages"
