--- a/_config.yml
+++ b/_config.yml
@@ -89,16 +89,16 @@ footer:
 
 defaults:
   # _posts
-  # - scope:
-  #     path: ""
-  #     type: posts
-  #   values:
-  #     layout: single
-  #     author_profile: true
-  #     read_time: true
-  #     comments: true
-  #     share: true
-  #     related: true
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
   # _pages
   - scope:
       path: "_pages"
@@ -107,6 +107,7 @@ defaults:
       layout: single
       author_profile: true
 
+      
 category_archive:
   type: liquid
   path: /categories/
