--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ email: omkarn@umich.edu
 #   Google search results) and in your feed.xml site description.
 # twitter_username: username
 github_username: omin23
-theme: minimal-mistakes-jekyll
-# minimal_mistakes_skin: "dark"
+# theme: "minimal-mistakes-jekyll"
+minimal_mistakes_skin: "dark"
 search: true
 
 # Build settings
