--- a/_config.yml
+++ b/_config.yml
@@ -13,20 +13,20 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Omkar Nayak 
+title: Omkar Nayak
 email: omkarn@umich.edu
-# description: >- # this means to ignore newlines until "baseurl:"
-#   Write an awesome description for your new site here. You can edit this
-#   line in _config.yml. It will appear in your document head meta (for
-#   Google search results) and in your feed.xml site description.
-# twitter_username: username
-github_username: omin23
-# theme: "minimal-mistakes-jekyll"
-minimal_mistakes_skin: "dark"
+#description: >- # this means to ignore newlines until "baseurl:"
+  #Write an awesome description for your new site here. You can edit this
+  #line in _config.yml. It will appear in your document head meta (for
+  #Google search results) and in your feed.xml site description.
+#twitter_username: username
+#github_username: username
+minimal_mistakes_skin: dark
 search: true
 
 # Build settings
 markdown: kramdown
+remote_theme: mmistakes/minimal-mistakes
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
@@ -59,46 +59,49 @@ plugins:
 
 author:
   name   : "Omkar Nayak"
-  avatar : "/assets/images/headshot.png"
-  bio    : "Undergrad at the University of Michigan Computer Science and Mathematics department"
+  # avatar : "/assets/images/profile.jpg"
+  bio    : "Undergrad student @ Umich deparment of statistics"
+  location  : "Ann Arbor, Michigan"
+  email   : "smrstep@umich.edu"
+  linkedin : 'seamus-somerstep'
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://omin23.github.io/web/"
-    # - label: "Twitter"
-    #   icon: "fab fa-fw fa-twitter-square"
-    #   url: "https://twitter.com/"
+    #- label: "Website"
+      #icon: "fas fa-fw fa-link"
+      #url: "https://"
+    #- label: "Twitter"
+      #icon: "fab fa-fw fa-twitter-square"
+      #url: "https://twitter.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/omin23"
-    # - label: "Instagram"
-    #   icon: "fab fa-fw fa-instagram"
-    #   url: "https://instagram.com/"
+      url: "https://github.com/somerstep"
+    #- label: "Instagram"
+      #icon: "fab fa-fw fa-instagram"
+      #url: "https://instagram.com/"
 
 footer:
   links:
-    # - label: "Twitter"
-    #   icon: "fab fa-fw fa-twitter-square"
-    #   url: "https://twitter.com/"
+    #- label: "Twitter"
+      #icon: "fab fa-fw fa-twitter-square"
+      #url: "https://twitter.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/omin23"
-    # - label: "Instagram"
-    #   icon: "fab fa-fw fa-instagram"
-    #   url: "https://instagram.com/"
+      url: "https://github.com/somerstep"
+    #- label: "Instagram"
+      #icon: "fab fa-fw fa-instagram"
+      #url: "https://instagram.com/"
 
 defaults:
   # _posts
-  # - scope:
-  #     path: ""
-  #     type: posts
-  #   values:
-  #     layout: single
-  #     author_profile: true
-  #     read_time: true
-  #     comments: true
-  #     share: true
-  #     related: true
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
   # _pages
   - scope:
       path: "_pages"
@@ -107,7 +110,6 @@ defaults:
       layout: single
       author_profile: true
 
-      
 category_archive:
   type: liquid
   path: /categories/
